[SPv175] Repaint non-composited layer on layer visibility change

When opacity changes between 0 or near-0 to non-zero (<1), existence
of paint chunk may change we do need to repaint the layers.

Bug: 826230
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I45d47d5eb8422df0fc991530ce41a4c2b7a86252
Reviewed-on: https://chromium-review.googlesource.com/1017917
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552560}
Former-commit-id: 371ffcdbb5dca7fb1a0aeb53956905bb1d4f9fc5